# NullDefect

./: .gitignore  README.md  dvc.yaml  main.py  mlflow.db  pyproject.toml  requirements.txt  setup.py  test.ipynb
.dvc/: config
configs/: data.yaml  evaluate.yaml  quantization.yaml  train_anomaly.yaml  train_classifier.yaml  train_segmentation.yaml
pipelines/: evaluation_pipeline.py  inference_pipeline.py  sagemaker_training.py
src/data/: dataset.py  split.py  tile.py  validate.py
src/evaluation/: calibration.py  evaluate.py  gradcam.py  metrics.py  report.py
src/models/: anomaly.py  classifier.py  segmentation.py
src/serving/: app.py  inference_engine.py  onnx_inference_engine.py
src/training/: losses.py  train_anomaly.py  train_classifier.py
src_package/: requirements.txt
src_package/configs/: data.yaml  train_anomaly.yaml  train_segmentation.yaml
src_package/src/data/: README.md  download.py  tile.py  transforms.py
src_package/src/models/: anomaly.py  classifier.py  segmentation.py
src_package/src/training/: train_segmentation.py
steps/evaluation/: calibration_step.py  compute_metrics.py  evidently_step.py  gradcam_step.py  load_models.py  summary_step.py  torch_device.py
steps/inference/: inference_steps.py
testing/: testClassify.ipynb
zenml_stack/: setup_stack.py
