[project]
name = "nulldefect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=1.3.1",
    "anomalib>=1.0.0",
    "boto3>=1.42.70",
    "dvc>=3.30.0",
    "dvc-s3>=3.0.0",
    "fastapi>=0.104.0",
    "grad-cam>=1.5.5",
    "great-expectations>=0.18.0",
    "ipykernel>=6.26.0",
    "kaggle>=2.0.0",
    "mlflow>=2.9.0",
    "numpy<2.0",
    "onnxscript>=0.5.0",
    "opencv-python-headless>=4.8.0",
    "pandas>=2.1.0",
    "pillow>=10.0.0",
    "pydantic>=2.12.5",
    "pytest>=7.4.0",
    "pytorch-gradcam>=0.2.1",
    "pytorch-lightning==2.1.0",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "ruff>=0.1.0",
    "sagemaker>=3.5.0",
    "sagemaker-core>=2.5.1",
    "sagemaker-train>=1.5.0",
    "scikit-learn>=1.3.0",
    "segmentation-models-pytorch>=0.5.0",
    "setuptools>=69,<82",
    "timm>=0.9.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "tqdm>=4.66.0",
    "uvicorn>=0.24.0",
    "wandb>=0.16.0",
    "zenml[server]>=0.94.1",
]
